--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>My Test Page</title>
 </head>
     <body>
+        <h1>Web dev is nice !</h1>
         <img src="images/androidPhoto.png" alt="Android logo: a small black rounded robot"/>
+        <ul>
+            <li>ANDROID VERSION 1.4</li>
+            <li>ANDROID VERSION 1.5</li>
+            <li>ANDROID VERSION 1.6</li>
+        </ul>
+
+        <p>This journey will be great if I'm doing the amount of work needed to become
+            a good software engineer.
+        </p>
     </body>
 </html>
