--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans"
+        rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet"/>
     <title>My Test Page</title>
 </head>
     <body>
-        <h1>Web dev is nice !</h1>
+        <h1 class="main-header">Web dev is nice !</h1>
         <img src="images/androidPhoto.png" alt="Android logo: a small black rounded robot"/>
-        <ul>
+        <ul class="gText-format">
             <li>ANDROID VERSION 1.4</li>
             <li>ANDROID VERSION 1.5</li>
             <li>ANDROID VERSION 1.6</li>
         </ul>
 
-        <p>This journey will be great if I'm doing the amount of work needed to become
+        <p class="gText-format">This journey will be great if I'm doing the amount of work needed to become
             a good software engineer.
         </p>
     </body>
