--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans"
         rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet"/>
+    <script src="scripts/main.js"></script>
     <title>My Test Page</title>
 </head>
     <body>
