--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>My Test Page</title>
 </head>
     <body>
-        <h1 class="main-header">Web dev is nice !</h1>
+        <h1 class="main-header">Web dev is nice</h1>
         <img src="images/androidPhoto.png" alt="Android logo: a small black rounded robot"/>
         <ul class="gText-format">
             <li>ANDROID VERSION 1.4</li>
@@ -21,6 +21,7 @@
         <p class="gText-format">This journey will be great if I'm doing the amount of work needed to become
             a good software engineer.
         </p>
+        <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
 </html>
