<meta> element working

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="authhor" content="Vladut Cosmin">
+    <meta
+        name = "description"
+        content= "Simple site made by me doing MDN Web tutorials."/>
+    <link
+        rel="icon"
+        href="images/iconBrowser.ico"/>
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans"
         rel="stylesheet" />
@@ -11,7 +18,9 @@
 </head>
     <body>
         <h1 class="main-header">Web dev is nice</h1>
+        <p>Japanese example: ご飯が熱い。</p>
         <img src="images/androidPhoto.png" alt="Android logo: a small black rounded robot"/>
+        <input type="text" enabled />
         <ul class="gText-format">
             <li>ANDROID VERSION 1.4</li>
             <li>ANDROID VERSION 1.5</li>
@@ -21,6 +30,8 @@
         <p class="gText-format">This journey will be great if I'm doing the amount of work needed to become
             a good software engineer.
         </p>
+
+        <em> <a href="https://google.com" title="Google Site Link" target="_blank">It is</a><strong>different?</strong> ?</em>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
