Adding defer for JavaScript file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans"
         rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet"/>
+    <script src="scripts/main.js" defer></script>
     <title>My Test Page</title>
 </head>
     <body>
@@ -33,6 +34,5 @@
 
         <em> <a href="https://google.com" title="Google Site Link" target="_blank">It is</a><strong>different?</strong> ?</em>
         <button>Change user</button>
-        <script src="scripts/main.js"></script>
     </body>
 </html>
