Setting up some files

--- a/index.html
+++ b/index.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="authhor" content="Vladut Cosmin">
     <meta
-        name = "description"
-        content= "Simple site made by me doing MDN Web tutorials."/>
+      name="description"
+      content="Simple site made by me doing MDN Web tutorials.">
+
+    <link rel="icon" href="images/iconBrowser.ico">
+
     <link
-        rel="icon"
-        href="images/iconBrowser.ico"/>
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans"
-        rel="stylesheet" />
-    <link href="styles/style.css" rel="stylesheet"/>
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet">
+
+    <link href="styles/style.css" rel="stylesheet">
+
     <script src="scripts/main.js" defer></script>
+
     <title>My Test Page</title>
-</head>
-    <body>
-        <h1 class="main-header">Web dev is nice</h1>
-        <p>Japanese example: ご飯が熱い。</p>
-        <img src="images/androidPhoto.png" alt="Android logo: a small black rounded robot"/>
-        <input type="text" enabled />
-        <ul class="gText-format">
-            <li>ANDROID VERSION 1.4</li>
-            <li>ANDROID VERSION 1.5</li>
-            <li>ANDROID VERSION 1.6</li>
-        </ul>
+  </head>
+  <body>
 
-        <p class="gText-format">This journey will be great if I'm doing the amount of work needed to become
-            a good software engineer.
-        </p>
+    <a href="https://music.youtube.com/watch?v=bZnttE-0Ozw&feature=share">
+      <h1 class="main-header">Web dev is nice</h1>
+    </a>
 
-        <em> <a href="https://google.com" title="Google Site Link" target="_blank">It is</a><strong>different?</strong> ?</em>
-        <button>Change user</button>
-    </body>
+    <img
+      src="images/androidPhoto.png"
+      alt="Android logo: a small black rounded robot">
+
+    <ul class="gText-format">
+      <li>ANDROID VERSION 1.4</li>
+      <li>ANDROID VERSION 1.5</li>
+      <li>ANDROID VERSION 1.6</li>
+    </ul>
+
+    <p>
+      I'm creating a link to
+      <a href="https://www.mozilla.org/en-US/">the Mozilla homepage</a>
+    </p>
+
+    <p class="gText-format">
+      This journey will be great if I'm doing the amount of work needed to
+      become a good software engineer.
+    </p>
+
+    <em>
+      <a href="https://google.com" title="Google Site Link" target="_blank">
+        It is
+      </a>
+      <strong>different?</strong> ?
+    </em>
+
+    <button>Change user</button>
+  </body>
 </html>
