Simple navigation menu

--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
   </head>
   <body>
 
-    <a href="https://music.youtube.com/watch?v=bZnttE-0Ozw&feature=share">
-      <h1 class="main-header">Web dev is nice</h1>
-    </a>
+    <h1 class="main-header">Web dev is nice</h1>
+
+    <ul class="gText-format">
+        <li>
+            <a href="navigation-menu-start/pictures.html">Pictures</a>
+        </li>
+        <li>
+            <a href="navigation-menu-start/projects.html">Projects</a>
+        </li>
+        <li>
+            <a href="navigation-menu-start/social.html">Social</a>
+        </li>
+    </ul>
 
     <img
       src="images/androidPhoto.png"
       alt="Android logo: a small black rounded robot">
-
-    <ul class="gText-format">
-      <li>ANDROID VERSION 1.4</li>
-      <li>ANDROID VERSION 1.5</li>
-      <li>ANDROID VERSION 1.6</li>
-    </ul>
 
     <p>
       I'm creating a link to
