--- a/navigation-menu-start/pictures.html
+++ b/navigation-menu-start/pictures.html
@@ -6,6 +6,9 @@
         <title>Pictures</title>
     </head>
     <body>
-        
+        <h1>Pictures page</h1>
+        <p>
+            <a href="../index.html">Main Page</a>
+        </p>
     </body>
 </html>
