--- a/navigation-menu-start/projects.html
+++ b/navigation-menu-start/projects.html
@@ -6,6 +6,9 @@
         <title>Projects</title>
     </head>
     <body>
-
+        <h1>Project page</h1>
+        <p>
+            <a href="../index.html">Main Page</a>
+        </p>
     </body>
 </html>
