Basic CSS integration

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
     <h1 class="main-header">Web dev is nice</h1>
 
+    <div class="outer">
+      <div class="box">Site in progress</div>
+    </div>
+
+    <div class="box1"></div>
+
     <ul class="gText-format">
         <li>
             <a href="navigation-menu-start/pictures.html">Pictures</a>
