--- a/navigation-menu-start/social.html
+++ b/navigation-menu-start/social.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="../styles/style.css" rel="stylesheet">
         <title>Social</title>
     </head>
     <body>
@@ -10,5 +11,10 @@
         <p>
             <a href="../index.html">Main Page</a>
         </p>
+        <ul>
+            <li class="special">Instagram</li>
+            <li>LinkedIn</l i>
+            <li>Youtube</li>
+        </ul>
     </body>
 </html>
