--- a/navigation-menu-start/projects.html
+++ b/navigation-menu-start/projects.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="../styles/style.css" rel="stylesheet">
         <title>Projects</title>
     </head>
     <body>
@@ -10,5 +11,10 @@
         <p>
             <a href="../index.html">Main Page</a>
         </p>
+
+        <ul>
+            <li>Trafic lights using Arduino</li>
+            <li class="special">Total Commander replica C#</li>
+        </ul>
     </body>
 </html>
