--- a/navigation-menu-start/projects.html
+++ b/navigation-menu-start/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../styles/style.css" rel="stylesheet">
+        <link href="../styles/style1.css" rel="stylesheet">
         <title>Projects</title>
     </head>
     <body>
